--- a/css/agenda/many.css
+++ b/css/agenda/many.css
@@ -1,321 +1,321 @@
 body {
-      width: 1200px;
-      height: 627px;
-      margin: 0;
-      background-image: url("https://fiware-ops.github.io/staging/directories/fiware-summit/summit.png");
-      background-repeat: no-repeat;
-      background-position: top 0 left 0;
-      font-family: Montserrat, Sans-serif;
-    }
+    width: 1200px;
+    height: 627px;
+    margin: 0;
+    background-image: url('https://fiware-ops.github.io/staging/directories/fiware-summit/summit.png');
+    background-repeat: no-repeat;
+    background-position: top 0 left 0;
+    font-family: Montserrat, Sans-serif;
+}
 
-    .track {
-      font-weight: 500;
-      border-radius: 25px;
-      padding: 6px 12px;
-      position: absolute;
-      top: 75px;
-      left: 433px;
-      border: solid 0px #000000;
-      background-color: #ffffff;
-    }
+.track {
+    font-weight: 500;
+    border-radius: 25px;
+    padding: 6px 12px;
+    position: absolute;
+    top: 75px;
+    left: 433px;
+    border: solid 0px #000000;
+    background-color: #ffffff;
+}
 
-    .panel-title {
-      position: absolute;
-      top: 120px;
-      left: 433px;
-      width: 690px;
-    }
-    .title {
-      font-size: 28px;
-      line-height: 36px;
-      font-weight: 700;
-      color: #000000;
-    }
+.panel-title {
+    position: absolute;
+    top: 120px;
+    left: 433px;
+    width: 690px;
+}
+.title {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 700;
+    color: #000000;
+}
 
-    .subtitle {
-      margin-top: 8px;
-      font-size: 24px;
-      line-height: 1.3em;
-      font-weight: 500;
-      color: #4c4c4c;
-    }
+.subtitle {
+    margin-top: 8px;
+    font-size: 24px;
+    line-height: 1.3em;
+    font-weight: 500;
+    color: #4c4c4c;
+}
 
-    .panel-info {
-      position: absolute;
-      top: 257px;
-      left: 50px;
-      width: 300px;
-      font-size: 24px;
-      line-height: 34px;
-      font-weight: 500;
-      color: white;
-    }
+.panel-info {
+    position: absolute;
+    top: 257px;
+    left: 50px;
+    width: 300px;
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: 500;
+    color: white;
+}
 
-    .track.light-blue {
-      background-color: #cce0f0;
-      color: #005fb9;
-    }
-    
-    .track.cyan {
-      background-color: #ddf1f4;
-      color: #0891b2;
-    }
-    
-    .track.light-yellow {
-      background-color: #fdf6cf;
-      color: #faa307;
-    }
-    
-    .track.light-green {
-      background-color: #d0ede4;
-      color: #108763;
-    }
+.track.light-blue {
+    background-color: #cce0f0;
+    color: #005fb9;
+}
 
-    .track.light-purple {
-      background-color: #f5eaef;
-      color: #9e3162;
-    }
+.track.cyan {
+    background-color: #ddf1f4;
+    color: #0891b2;
+}
 
-    .title-type {
-      padding-right: 1em;
-    }
+.track.light-yellow {
+    background-color: #fdf6cf;
+    color: #faa307;
+}
 
-    .title-type.light-blue {
-      color: #005fb9;
-    }
+.track.light-green {
+    background-color: #d0ede4;
+    color: #108763;
+}
 
-    .title-type.cyan {
-      color: #0891b2;
-    }
+.track.light-purple {
+    background-color: #f5eaef;
+    color: #9e3162;
+}
 
-    .title-type.light-yellow {
-      color: #faa307;
-    }
+.title-type {
+    padding-right: 1em;
+}
 
-    .title-type.light-green {
-      color: #108763;
-    }
+.title-type.light-blue {
+    color: #005fb9;
+}
 
-    .title-type.light-purple {
-      color: #9e3162;
-    }
-    
-    .topic-icon {
-      width: 140px;
-      background-color: #8ad2dc;
-      border-radius: 4px;
-      float: right;
-    }
-    
-    .topic-icon.light-blue {
-      background-color: #cce0f0;
-    }
-    
-    .topic-icon.cyan {
-        background-color: #ddf1f4;
-    }
-    
-    .topic-icon.light-yellow {
-      background-color: #fdf6cf;
-    }
-    
-    .topic-icon.light-green {
-      background-color: #d0ede4;
-    }
+.title-type.cyan {
+    color: #0891b2;
+}
 
-    .topic-icon.light-purple {
-      color: #9e3162;
-    }
+.title-type.light-yellow {
+    color: #faa307;
+}
 
-    .panel-moderated-by {
-      width: 690px;
-      position: absolute;
-      top: 275px;
-      left: 433px;
-      font-size: 18px;
-      font-weight: 500;
-      text-transform: uppercase;
-      color: #4c4c4c;
-    }
+.title-type.light-green {
+    color: #108763;
+}
 
-    .panel-speakers {
-      width: 690px;
-      position: absolute;
-      top: 330px;
-      left: 433px;
-    }
+.title-type.light-purple {
+    color: #9e3162;
+}
 
-    .panel-speakers.more {
-      width: 700px;
-      top: 300px;
-    }
+.topic-icon {
+    width: 140px;
+    background-color: #8ad2dc;
+    border-radius: 4px;
+    float: right;
+}
 
-    .profile-picture {
-      width: 200px;
-      min-width: 200px;
-      max-width: 200px;
-      height: 200px;
-    }
+.topic-icon.light-blue {
+    background-color: #cce0f0;
+}
 
-    .profile-picture img {
-      width: 100%;
-      border-radius: 110px;
-    }
+.topic-icon.cyan {
+    background-color: #ddf1f4;
+}
 
-    .profile-picture-small {
-      width: 100%;
-      align-items: center;
-    }
+.topic-icon.light-yellow {
+    background-color: #fdf6cf;
+}
 
-    .profile-picture-small img {
-      margin: auto;
-      width: 130px;
-      min-width: 130px;
-      max-width: 130px;
-      height: 130px;
-      display: block;
-      width: 100%;
-      border-radius: 80px;
-    }
+.topic-icon.light-green {
+    background-color: #d0ede4;
+}
 
-    .profile-picture-tiny {
-      margin-right: 10px;
-    }
+.topic-icon.light-purple {
+    color: #9e3162;
+}
 
-    .profile-picture-tiny img {
-      margin: 0;
-      width: 80px;
-      min-width: 80px;
-      max-width: 80px;
-      height: 80px;
-      display: block;
-      width: 100%;
-      border-radius: 50px;
-    }
+.panel-moderated-by {
+    width: 690px;
+    position: absolute;
+    top: 275px;
+    left: 433px;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #4c4c4c;
+}
 
-    .speakers {
-      display: flex;
-      flex-direction: row;
-      gap: 50px;
-    }
+.panel-speakers {
+    width: 690px;
+    position: absolute;
+    top: 330px;
+    left: 433px;
+}
 
-    .speakers.more {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 13px;
-  }
+.panel-speakers.more {
+    width: 700px;
+    top: 300px;
+}
 
-    .speaker {
-      min-width: 32%;
-      width: 32%;
-      max-width: 32%;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-  }
+.profile-picture {
+    width: 200px;
+    min-width: 200px;
+    max-width: 200px;
+    height: 200px;
+}
 
-    .speaker-info {
-      margin-left: 20px;
-    }
+.profile-picture img {
+    width: 100%;
+    border-radius: 110px;
+}
 
-    .speakers.more .speaker-info {
-      margin-left: 0;
-    }
+.profile-picture-small {
+    width: 100%;
+    align-items: center;
+}
 
-    .grid-container .speaker-info {
-      margin-left: 0px;
-      padding-top: 0px;
-      text-align: center;
-    }
+.profile-picture-small img {
+    margin: auto;
+    width: 130px;
+    min-width: 130px;
+    max-width: 130px;
+    height: 130px;
+    display: block;
+    width: 100%;
+    border-radius: 80px;
+}
 
-    .speaker-info-small {
-      /* padding-top: 5px;
+.profile-picture-tiny {
+    margin-right: 10px;
+}
+
+.profile-picture-tiny img {
+    margin: 0;
+    width: 80px;
+    min-width: 80px;
+    max-width: 80px;
+    height: 80px;
+    display: block;
+    width: 100%;
+    border-radius: 50px;
+}
+
+.speakers {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+.speakers.more {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 13px;
+}
+
+.speaker {
+    min-width: 32%;
+    width: 32%;
+    max-width: 32%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.speaker-info {
+    margin-left: 20px;
+}
+
+.speakers.more .speaker-info {
+    margin-left: 0;
+}
+
+.grid-container .speaker-info {
+    margin-left: 0px;
+    padding-top: 0px;
+    text-align: center;
+}
+
+.speaker-info-small {
+    /* padding-top: 5px;
       padding-bottom: 5px; */
-    }
+}
 
-    .speaker-name {
-      font-size: 28px;
-      line-height: 40px;
-      font-weight: 700;
-      color: #000000;
-      padding: 0;
-      margin-bottom: 5px;
-    }
+.speaker-name {
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: 700;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
+}
 
-    .grid-container .speaker-name {
-      font-size: 20px;
-      line-height: 1.3em;
-      font-weight: 600;
-      color: #000000;
-      padding: 0;
-      margin-bottom: 5px;
-    }
+.grid-container .speaker-name {
+    font-size: 20px;
+    line-height: 1.3em;
+    font-weight: 600;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
+}
 
-    .speakers.more .speaker-name {
-      font-size: 18px;
-      line-height: 22px;
-      font-weight: 600;
-      color: #000000;
-      padding: 0;
-      margin-bottom: 5px;
-    }
+.speakers.more .speaker-name {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 600;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
+}
 
-    .speaker-job-title {
-      font-size: 28px;
-      line-height: 36px;
-      font-weight: 400;
-      color: #696969;
-      padding: 0;
-      margin-bottom: 5px;
-    }
+.speaker-job-title {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 5px;
+}
 
-    .grid-container .speaker-job-title {
-      font-size: 18px;
-      line-height: 1em;
-      font-weight: 400;
-      color: #696969;
-      padding: 0;
-      margin-bottom: 8px;
-    }
+.grid-container .speaker-job-title {
+    font-size: 18px;
+    line-height: 1em;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 8px;
+}
 
-    .speakers.more .speaker-job-title {
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 400;
-      color: #696969;
-      padding: 0;
-      margin-bottom: 0;
-    }
+.speakers.more .speaker-job-title {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 0;
+}
 
-    .speaker-company {
-      font-size: 24px;
-      line-height: 32px;
-      font-weight: 400;
-      color: #696969;
-      padding: 0;
-    }
+.speaker-company {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+}
 
-    .grid-container .speaker-company {
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 400;
-      color: #696969;
-      padding: 0;
-    }
+.grid-container .speaker-company {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+}
 
-    .speakers.more .speaker-company {
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 400;
-      color: #696969;
-      padding: 0;
-    }
+.speakers.more .speaker-company {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+}
 
-    .grid-container {
-      display: grid;
-      grid-auto-columns: minmax(0, 1fr);
-      /* grid-auto-flow: column; */
-      align-items: center;
-      gap: 15px;
-    }
+.grid-container {
+    display: grid;
+    grid-auto-columns: minmax(0, 1fr);
+    /* grid-auto-flow: column; */
+    align-items: center;
+    gap: 15px;
+}
