--- a/css/agenda/one.css
+++ b/css/agenda/one.css
@@ -2,13 +2,13 @@ body {
     width: 1200px;
     height: 627px;
     margin: 0;
-    background-image: url("https://fiware-ops.github.io/staging/directories/fiware-summit/summit.png");
+    background-image: url('https://fiware-ops.github.io/staging/directories/fiware-summit/summit.png');
     background-repeat: no-repeat;
     background-position: top 0 left 0;
     font-family: Montserrat, Sans-serif;
-  }
+}
 
-  .track {
+.track {
     font-weight: 500;
     border-radius: 25px;
     padding: 6px 12px;
@@ -17,30 +17,30 @@ body {
     left: 433px;
     border: solid 0px #000000;
     background-color: #ffffff;
-  }
+}
 
-  .panel-title {
+.panel-title {
     position: absolute;
     top: 120px;
     left: 433px;
     width: 690px;
-  }
-  .title {
+}
+.title {
     font-size: 28px;
     line-height: 36px;
     font-weight: 700;
     color: #000000;
-  }
+}
 
-  .subtitle {
+.subtitle {
     margin-top: 8px;
     font-size: 24px;
     line-height: 1.3em;
     font-weight: 500;
     color: #4c4c4c;
-  }
+}
 
-  .panel-info {
+.panel-info {
     position: absolute;
     top: 257px;
     left: 50px;
@@ -49,75 +49,75 @@ body {
     line-height: 34px;
     font-weight: 500;
     color: white;
-  }
+}
 
-  .track.light-grey {
-      background-color: #ebebeb;
-      color: #000;
-  }
+.track.light-grey {
+    background-color: #ebebeb;
+    color: #000;
+}
 
-  .track.light-blue {
-      background-color: #cce0f0;
-      color: #005fb9;
-  }
-  
-  .track.cyan {
-      background-color: #ddf1f4;
-      color: #0891b2;
-  }
-  
-  .track.light-yellow  {
-      background-color: #fdf6cf;
-      color: #faa307;
-  }
-  
-  .track.light-green {
-      background-color: #d0ede4;
-      color: #108763;
-  }
+.track.light-blue {
+    background-color: #cce0f0;
+    color: #005fb9;
+}
 
-  .track.light-orange {
-      background-color: #fce9e3;
-      color: #ec5629;
-  }
+.track.cyan {
+    background-color: #ddf1f4;
+    color: #0891b2;
+}
 
-  .track.light-purple {
-      background-color: #f5eaef;
-      color: #9e3162;
-  }
-  
-  .topic-icon {
+.track.light-yellow {
+    background-color: #fdf6cf;
+    color: #faa307;
+}
+
+.track.light-green {
+    background-color: #d0ede4;
+    color: #108763;
+}
+
+.track.light-orange {
+    background-color: #fce9e3;
+    color: #ec5629;
+}
+
+.track.light-purple {
+    background-color: #f5eaef;
+    color: #9e3162;
+}
+
+.topic-icon {
     width: 224px;
     background-color: #8ad2dc;
     border-radius: 4px;
     float: right;
-  }
-  
-  .topic-icon.light-orange {
+}
+
+.topic-icon.light-orange {
     background-color: #fce9e3;
-  }
+}
 
-  .topic-icon.light-blue {
+.topic-icon.light-blue {
     background-color: #cce0f0;
-  }
+}
 
-  .topic-icon.cyan {
-      background-color: #ddf1f4;
-  }
+.topic-icon.cyan {
+    background-color: #ddf1f4;
+}
 
-  .topic-icon.light-yellow {
+.topic-icon.light-yellow {
     background-color: #fdf6cf;
-  }
+}
 
-  .topic-icon.light-purple {
+.topic-icon.light-purple {
     background-color: #f5eaef;
-  }
+}
 
-  .topic-icon.light-green {
+.topic-icon.light-green {
     background-color: #d0ede4;
-  }
+}
 
-  .panel-moderated-by {
+.panel-moderated-by {
     width: 690px;
     position: absolute;
     top: 275px;
@@ -126,37 +126,37 @@ body {
     font-weight: 500;
     text-transform: uppercase;
     color: #4c4c4c;
-  }
+}
 
-  .panel-speakers {
+.panel-speakers {
     width: 690px;
     position: absolute;
     top: 330px;
     left: 433px;
-  }
+}
 
-  .panel-speakers.more {
+.panel-speakers.more {
     top: 300px;
-  }
+}
 
-  .profile-picture {
+.profile-picture {
     width: 200px;
     min-width: 200px;
     max-width: 200px;
     height: 200px;
-  }
+}
 
-  .profile-picture img {
+.profile-picture img {
     width: 100%;
     border-radius: 110px;
-  }
+}
 
-  .profile-picture-small {
+.profile-picture-small {
     width: 100%;
     align-items: center;
-  }
+}
 
-  .profile-picture-small img {
+.profile-picture-small img {
     margin: auto;
     width: 130px;
     min-width: 130px;
@@ -165,27 +165,27 @@ body {
     display: block;
     width: 100%;
     border-radius: 80px;
-  }
+}
 
-  .panel-session {
+.panel-session {
     width: 690px;
     position: absolute;
     top: 260px;
     left: 433px;
-  }
+}
 
-  .session-picture {
+.session-picture {
     width: 280px;
     min-width: 280px;
     max-width: 280px;
     height: 280px;
     margin: 0 auto;
-  }
+}
 
-  .session-picture img {
+.session-picture img {
     width: 100%;
     border-radius: 110px;
-  }
+}
 
 .session-picture.light-grey {
     background-color: #ebebeb;
@@ -223,127 +223,126 @@ body {
     border-color: #1b493a;
 }
 
-
-  .speakers {
+.speakers {
     display: flex;
     flex-direction: row;
     gap: 50px;
-  }
+}
 
-  .speakers.more {
+.speakers.more {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     gap: 10px;
-  }
+}
 
-  .speaker {
+.speaker {
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
+}
 
-  .speaker-info {
+.speaker-info {
     margin-left: 20px;
-  }
+}
 
-  .speakers.more .speaker-info {
+.speakers.more .speaker-info {
     margin-left: 0;
-  }
+}
 
-  .grid-container .speaker-info {
+.grid-container .speaker-info {
     margin-left: 0px;
     padding-top: 0px;
     text-align: center;
-  }
+}
 
-  .speaker-info-small {
+.speaker-info-small {
     padding-top: 5px;
     padding-bottom: 5px;
-  }
+}
 
-  .speaker-name {
+.speaker-name {
     font-size: 28px;
     line-height: 40px;
     font-weight: 700;
     color: #000000;
     padding: 0;
     margin-bottom: 5px;
-  }
+}
 
-  .grid-container .speaker-name {
+.grid-container .speaker-name {
     font-size: 20px;
     line-height: 1.3em;
     font-weight: 600;
     color: #000000;
     padding: 0;
     margin-bottom: 5px;
-  }
+}
 
-  .speakers.more .speaker-name {
+.speakers.more .speaker-name {
     font-size: 18px;
     line-height: 24px;
     font-weight: 600;
     color: #000000;
     padding: 0;
     margin-bottom: 0;
-  }
+}
 
-  .speaker-job-title {
+.speaker-job-title {
     font-size: 28px;
     line-height: 36px;
     font-weight: 400;
     color: #696969;
     padding: 0;
     margin-bottom: 5px;
-  }
+}
 
-  .grid-container .speaker-job-title {
+.grid-container .speaker-job-title {
     font-size: 18px;
     line-height: 1em;
     font-weight: 400;
     color: #696969;
     padding: 0;
     margin-bottom: 8px;
-  }
+}
 
-  .speakers.more .speaker-job-title {
+.speakers.more .speaker-job-title {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
     color: #696969;
     padding: 0;
     margin-bottom: 0;
-  }
+}
 
-  .speaker-company {
+.speaker-company {
     font-size: 24px;
     line-height: 32px;
     font-weight: 400;
     color: #696969;
     padding: 0;
-  }
+}
 
-  .grid-container .speaker-company {
+.grid-container .speaker-company {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
     color: #696969;
     padding: 0;
-  }
+}
 
-  .speakers.more .speaker-company {
+.speakers.more .speaker-company {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
     color: #696969;
     padding: 0;
-  }
+}
 
-  .grid-container {
+.grid-container {
     display: grid;
     grid-auto-columns: minmax(0, 1fr);
     /* grid-auto-flow: column; */
     align-items: center;
     gap: 15px;
-  }
+}
