--- a/css/agenda/two.css
+++ b/css/agenda/two.css
@@ -2,13 +2,13 @@ body {
     width: 1200px;
     height: 627px;
     margin: 0;
-    background-image: url("https://fiware-ops.github.io/staging/directories/fiware-summit/summit.png");
+    background-image: url('https://fiware-ops.github.io/staging/directories/fiware-summit/summit.png');
     background-repeat: no-repeat;
     background-position: top 0 left 0;
     font-family: Montserrat, Sans-serif;
-  }
+}
 
-  .track {
+.track {
     font-weight: 500;
     border-radius: 25px;
     padding: 6px 12px;
@@ -17,30 +17,30 @@ body {
     left: 433px;
     border: solid 0px #000000;
     background-color: #ffffff;
-  }
+}
 
-  .panel-title {
+.panel-title {
     position: absolute;
     top: 120px;
     left: 433px;
     width: 690px;
-  }
-  .title {
+}
+.title {
     font-size: 28px;
     line-height: 36px;
     font-weight: 700;
     color: #000000;
-  }
+}
 
-  .subtitle {
+.subtitle {
     margin-top: 8px;
     font-size: 24px;
     line-height: 1.3em;
     font-weight: 500;
     color: #4c4c4c;
-  }
+}
 
-  .panel-info {
+.panel-info {
     position: absolute;
     top: 257px;
     left: 50px;
@@ -49,61 +49,61 @@ body {
     line-height: 34px;
     font-weight: 500;
     color: white;
-  }
+}
 
-  .track.light-blue {
+.track.light-blue {
     background-color: #cce0f0;
     color: #005fb9;
-  }
-  
-  .track.cyan {
+}
+
+.track.cyan {
     background-color: #ddf1f4;
     color: #0891b2;
-  }
-  
-  .track.light-yellow {
+}
+
+.track.light-yellow {
     background-color: #fdf6cf;
     color: #faa307;
-  }
-  
-  .track.light-green {
+}
+
+.track.light-green {
     background-color: #d0ede4;
     color: #108763;
-  }
+}
 
-  .track.light-purple {
+.track.light-purple {
     background-color: #f5eaef;
     color: #9e3162;
-  }
-  
-  .topic-icon {
+}
+
+.topic-icon {
     width: 140px;
     background-color: #8ad2dc;
     border-radius: 4px;
     float: right;
-  }
-  
-  .topic-icon.light-blue {
+}
+
+.topic-icon.light-blue {
     background-color: #cce0f0;
-  }
-  
-  .topic-icon.cyan {
-      background-color: #ddf1f4;
-  }
-  
-  .topic-icon.light-yellow {
+}
+
+.topic-icon.cyan {
+    background-color: #ddf1f4;
+}
+
+.topic-icon.light-yellow {
     background-color: #fdf6cf;
-  }
-  
-  .topic-icon.light-green {
+}
+
+.topic-icon.light-green {
     background-color: #d0ede4;
-  }
+}
 
-  .topic-icon.light-purple {
+.topic-icon.light-purple {
     background-color: #f5eaef;
-  }
+}
 
-  .panel-moderated-by {
+.panel-moderated-by {
     width: 690px;
     position: absolute;
     top: 275px;
@@ -112,37 +112,37 @@ body {
     font-weight: 500;
     text-transform: uppercase;
     color: #4c4c4c;
-  }
+}
 
-  .panel-speakers {
+.panel-speakers {
     width: 690px;
     position: absolute;
     top: 330px;
     left: 433px;
-  }
+}
 
-  .panel-speakers.more {
+.panel-speakers.more {
     top: 300px;
-  }
+}
 
-  .profile-picture {
+.profile-picture {
     width: 200px;
     min-width: 200px;
     max-width: 200px;
     height: 200px;
-  }
+}
 
-  .profile-picture img {
+.profile-picture img {
     width: 100%;
     border-radius: 110px;
-  }
+}
 
-  .profile-picture-small {
+.profile-picture-small {
     width: 100%;
     align-items: center;
-  }
+}
 
-  .profile-picture-small img {
+.profile-picture-small img {
     margin: auto;
     width: 130px;
     min-width: 130px;
@@ -151,128 +151,128 @@ body {
     display: block;
     width: 100%;
     border-radius: 80px;
-  }
+}
 
-  .speakers {
+.speakers {
     display: flex;
     flex-direction: row;
     gap: 50px;
-  }
+}
 
-  .speakers.more {
+.speakers.more {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     gap: 10px;
-  }
+}
 
-  .speaker {
+.speaker {
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
+}
 
-  .speaker-info {
+.speaker-info {
     margin-left: 20px;
-  }
+}
 
-  .speakers.more .speaker-info {
+.speakers.more .speaker-info {
     margin-left: 0;
-  }
+}
 
-  .grid-container .speaker-info {
+.grid-container .speaker-info {
     margin-left: 0px;
     padding-top: 0px;
     text-align: center;
-  }
+}
 
-  .speaker-info-small {
+.speaker-info-small {
     padding-top: 5px;
     padding-bottom: 5px;
-  }
+}
 
-  .speaker-name {
+.speaker-name {
     font-size: 28px;
     line-height: 40px;
     font-weight: 700;
     color: #000000;
     padding: 0;
     margin-bottom: 5px;
-  }
+}
 
-  .grid-container .speaker-name {
+.grid-container .speaker-name {
     font-size: 20px;
     line-height: 1.3em;
     font-weight: 600;
     color: #000000;
     padding: 0;
     margin-bottom: 5px;
-  }
+}
 
-  .speakers.more .speaker-name {
+.speakers.more .speaker-name {
     font-size: 18px;
     line-height: 24px;
     font-weight: 600;
     color: #000000;
     padding: 0;
     margin-bottom: 0;
-  }
+}
 
-  .speaker-job-title {
+.speaker-job-title {
     font-size: 28px;
     line-height: 36px;
     font-weight: 400;
     color: #696969;
     padding: 0;
     margin-bottom: 5px;
-  }
+}
 
-  .grid-container .speaker-job-title {
+.grid-container .speaker-job-title {
     font-size: 18px;
     line-height: 1em;
     font-weight: 400;
     color: #696969;
     padding: 0;
     margin-bottom: 8px;
-  }
+}
 
-  .speakers.more .speaker-job-title {
+.speakers.more .speaker-job-title {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
     color: #696969;
     padding: 0;
     margin-bottom: 0;
-  }
+}
 
-  .speaker-company {
+.speaker-company {
     font-size: 24px;
     line-height: 32px;
     font-weight: 400;
     color: #696969;
     padding: 0;
-  }
+}
 
-  .grid-container .speaker-company {
+.grid-container .speaker-company {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
     color: #696969;
     padding: 0;
-  }
+}
 
-  .speakers.more .speaker-company {
+.speakers.more .speaker-company {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
     color: #696969;
     padding: 0;
-  }
+}
 
-  .grid-container {
+.grid-container {
     display: grid;
     grid-auto-columns: minmax(0, 1fr);
     /* grid-auto-flow: column; */
     align-items: center;
     gap: 15px;
-  }
+}
