--- a/css/stage/many.css
+++ b/css/stage/many.css
@@ -1,142 +1,142 @@
 body {
-  width: 1920px;
-  height: 1080px;
-  margin: 0;
-  background-image: url("https://fiware-ops.github.io/staging/directories/fiware-summit/stage-background.png");
-  background-repeat: no-repeat;
-  background-position: top 0 left 0;
-  font-family: Montserrat, Sans-serif;
+    width: 1920px;
+    height: 1080px;
+    margin: 0;
+    background-image: url('https://fiware-ops.github.io/staging/directories/fiware-summit/stage-background.png');
+    background-repeat: no-repeat;
+    background-position: top 0 left 0;
+    font-family: Montserrat, Sans-serif;
 }
 
 .track {
-  font-size: 24px;
-  font-weight: 500;
-  border-radius: 25px;
-  padding: 8px 18px;
-  position: absolute;
-  top: 160px;
-  left: 692px;
-  border: solid 0px #000000;
-  background-color: #ffffff;
+    font-size: 24px;
+    font-weight: 500;
+    border-radius: 25px;
+    padding: 8px 18px;
+    position: absolute;
+    top: 160px;
+    left: 692px;
+    border: solid 0px #000000;
+    background-color: #ffffff;
 }
 
 .panel-title {
-  position: absolute;
-  top: 220px;
-  left: 692px;
-  width: 1200px;
-  max-width: 1090px;
+    position: absolute;
+    top: 220px;
+    left: 692px;
+    width: 1200px;
+    max-width: 1090px;
 }
 
 .title {
-  font-size: 48px;
-  line-height: 64px;
-  font-weight: 700;
-  color: #000000;
+    font-size: 48px;
+    line-height: 64px;
+    font-weight: 700;
+    color: #000000;
 }
 
 .subtitle {
-  margin-top: 10px;
-  font-size: 36px;
-  line-height: 1.4em;
-  font-weight: 500;
-  color: #4c4c4c;
+    margin-top: 10px;
+    font-size: 36px;
+    line-height: 1.4em;
+    font-weight: 500;
+    color: #4c4c4c;
 }
 
 .panel-info {
-  position: absolute;
-  top: 442px;
-  left: 71px;
-  width: 480px;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 500;
-  color: white;
+    position: absolute;
+    top: 442px;
+    left: 71px;
+    width: 480px;
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: 500;
+    color: white;
 }
 
 .track.light-grey {
-  background-color: #ebebeb;
-  color: #000;
+    background-color: #ebebeb;
+    color: #000;
 }
 
 .track.light-blue {
-  background-color: #cce0f0;
-  color: #005fb9;
+    background-color: #cce0f0;
+    color: #005fb9;
 }
 
 .track.cyan {
-  background-color: #ddf1f4;
-  color: #0891b2;
+    background-color: #ddf1f4;
+    color: #0891b2;
 }
 
 .track.light-yellow {
-  background-color: #fdf6cf;
-  color: #faa307;
+    background-color: #fdf6cf;
+    color: #faa307;
 }
 
 .track.light-green {
-  background-color: #d0ede4;
-  color: #108763;
+    background-color: #d0ede4;
+    color: #108763;
 }
 
 .track.light-orange {
-  background-color: #fce9e3;
-  color: #ec5629;
+    background-color: #fce9e3;
+    color: #ec5629;
 }
 
 .track.light-purple {
-  background-color: #f5eaef;
-  color: #9e3162;
+    background-color: #f5eaef;
+    color: #9e3162;
 }
 
 .topic-icon {
-  width: 224px;
-  background-color: #8ad2dc;
-  border-radius: 4px;
-  float: right;
+    width: 224px;
+    background-color: #8ad2dc;
+    border-radius: 4px;
+    float: right;
 }
 
 .topic-icon.light-orange {
-  background-color: #fce9e3;
+    background-color: #fce9e3;
 }
 
 .topic-icon.light-blue {
-  background-color: #cce0f0;
+    background-color: #cce0f0;
 }
 
 .topic-icon.cyan {
-  background-color: #ddf1f4;
+    background-color: #ddf1f4;
 }
 
 .topic-icon.light-yellow {
-  background-color: #fdf6cf;
+    background-color: #fdf6cf;
 }
 
 .topic-icon.light-purple {
-  background-color: #f5eaef;
+    background-color: #f5eaef;
 }
 
 .topic-icon.light-green {
-  background-color: #d0ede4;
+    background-color: #d0ede4;
 }
 
 .panel-moderated-by {
-  width: 690px;
-  position: absolute;
-  top: 275px;
-  left: 692px;
-  font-size: 18px;
-  font-weight: 500;
-  text-transform: uppercase;
-  color: #4c4c4c;
+    width: 690px;
+    position: absolute;
+    top: 275px;
+    left: 692px;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #4c4c4c;
 }
 
 .panel-speakers {
-  width: 1100px;
-  max-width: 1090px;
-  position: absolute;
-  top: 568px;
-  left: 692px;
+    width: 1100px;
+    max-width: 1090px;
+    position: absolute;
+    top: 568px;
+    left: 692px;
 }
 
 .panel-speakers.more {
@@ -146,173 +146,173 @@ body {
 }
 
 .profile-picture {
-  width: 200px;
-  min-width: 200px;
-  max-width: 200px;
-  height: 200px;
+    width: 200px;
+    min-width: 200px;
+    max-width: 200px;
+    height: 200px;
 }
 
 .profile-picture img {
-  width: 100%;
-  border-radius: 110px;
+    width: 100%;
+    border-radius: 110px;
 }
 
 .profile-picture-small {
-  width: 100%;
-  align-items: center;
+    width: 100%;
+    align-items: center;
 }
 
 .profile-picture-small img {
-  margin: auto;
-  width: 130px;
-  min-width: 130px;
-  max-width: 130px;
-  height: 130px;
-  display: block;
-  width: 100%;
-  border-radius: 80px;
+    margin: auto;
+    width: 130px;
+    min-width: 130px;
+    max-width: 130px;
+    height: 130px;
+    display: block;
+    width: 100%;
+    border-radius: 80px;
 }
 
 .profile-picture-tiny {
-  /* margin-right: 10px; */
+    /* margin-right: 10px; */
 }
 
 .profile-picture-tiny img {
-  margin: 0;
-  width: 80px;
-  min-width: 150px;
-  max-width: 150px;
-  height: 150px;
-  display: block;
-  width: 100%;
-  border-radius: 80px;
+    margin: 0;
+    width: 80px;
+    min-width: 150px;
+    max-width: 150px;
+    height: 150px;
+    display: block;
+    width: 100%;
+    border-radius: 80px;
 }
 
 .speakers {
-  display: flex;
-  flex-direction: row;
-  gap: 100px;
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
 }
 
 .speakers.more {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .speaker {
-  min-width: 32%;
-  width: 32%;
-  max-width: 32%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
+    min-width: 32%;
+    width: 32%;
+    max-width: 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .speaker-info {
-  margin-left: 20px;
+    margin-left: 20px;
 }
 
 .speakers.more .speaker-info {
-  margin-left: 0;
+    margin-left: 0;
 }
 
 .grid-container .speaker-info {
-  margin-left: 0px;
-  padding-top: 0px;
-  text-align: center;
+    margin-left: 0px;
+    padding-top: 0px;
+    text-align: center;
 }
 
 .speaker-info-small {
-  /* padding-top: 5px;
+    /* padding-top: 5px;
       padding-bottom: 5px; */
-  text-align: center;
+    text-align: center;
 }
 
 .speaker-name {
-  font-size: 28px;
-  line-height: 40px;
-  font-weight: 700;
-  color: #000000;
-  padding: 0;
-  margin-bottom: 5px;
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: 700;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
 }
 
 .grid-container .speaker-name {
-  font-size: 20px;
-  line-height: 1.3em;
-  font-weight: 600;
-  color: #000000;
-  padding: 0;
-  margin-bottom: 5px;
+    font-size: 20px;
+    line-height: 1.3em;
+    font-weight: 600;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
 }
 
 .speakers.more .speaker-name {
-  font-size: 18px;
-  line-height: 22px;
-  font-weight: 600;
-  color: #000000;
-  padding: 0;
-  margin-bottom: 5px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 600;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
 }
 
 .speaker-job-title {
-  font-size: 28px;
-  line-height: 36px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-  margin-bottom: 5px;
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 5px;
 }
 
 .grid-container .speaker-job-title {
-  font-size: 18px;
-  line-height: 1em;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-  margin-bottom: 8px;
+    font-size: 18px;
+    line-height: 1em;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 8px;
 }
 
 .speakers.more .speaker-job-title {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-  margin-bottom: 0;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 0;
 }
 
 .speaker-company {
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
 }
 
 .grid-container .speaker-company {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
 }
 
 .speakers.more .speaker-company {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
 }
 
 .grid-container {
-  display: grid;
-  grid-auto-columns: minmax(0, 1fr);
-  /* grid-auto-flow: column; */
-  align-items: center;
-  gap: 15px;
+    display: grid;
+    grid-auto-columns: minmax(0, 1fr);
+    /* grid-auto-flow: column; */
+    align-items: center;
+    gap: 15px;
 }
